--- a/src/index.template.html
+++ b/src/index.template.html
@@ -3,6 +3,8 @@
     <head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
+        <link href="../src/css/style.css" rel="stylesheet">
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
