ADD: initial commit

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -10,6 +10,6 @@
     <body>
             <div id="container"></div>
             <div id="root"></div>
-            <script type="text/javascript" src="index.js" ></script>    
+            <script type="text/javascript" src="exchanger.js" ></script>    
     </body>
 </html>
